--- a/wiki/fr/Sketcher_ConstrainEqual.html
+++ b/wiki/fr/Sketcher_ConstrainEqual.html
@@ -94,8 +94,9 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">Sketch</span><span class="o">.</span><span class="n">addConstraint</span><span class="p">(</span><span class="n">Sketcher</span><span class="o">.</span><span class="n">Constraint</span><span class="p">(</span><span class="s1">'Equal'</span><span class="p">,</span> <span class="n">Edge1</span><span class="p">,</span> <span class="n">Edge2</span><span class="p">))</span>
 </pre></div>
 <p>La page <a href="../fr/Sketcher_scripting.html" title="Sketcher scripting/fr">Sketcher Scripts</a> explique les valeurs qui peuvent &ecirc;tre utilis&eacute;es pour <code>Edge1</code> et <code>Edge2</code> et contient d'autres exemples sur la fa&ccedil;on de cr&eacute;er des contraintes &agrave; partir de scripts Python.
+</p><p><span id="Notes"></span>
 </p>
-<h2><span class="mw-headline" id="Notes">Notes</span></h2>
+<h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
 <ul><li>Using <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of equal constraints can prevent <a href="../Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">flipping</a>. Points constrained by these dimensions will only switch places if the sign of their value is changed. To keep the dimensions equal the constraints can be linked to each other with an expression, or to the same value in a <a href="../Std_VarSet.html" title="Std VarSet">VarSet</a> or <a href="../Spreadsheet_CreateSheet.html" title="Spreadsheet CreateSheet">spreadsheet</a>.</li></ul>
 <p><br>
 </p>
@@ -142,13 +143,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125102718
+Cached time: 20260125125644
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.100 seconds
-Real time usage: 0.134 seconds
-Preprocessor visited node count: 446/1000000
+Real time usage: 0.241 seconds
+Preprocessor visited node count: 447/1000000
 Post&#8208;expand include size: 26318/2097152 bytes
 Template argument size: 10507/2097152 bytes
 Highest expansion depth: 6/100
@@ -158,19 +159,19 @@ Unstrip post&#8208;expand size: 3439/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.167      1 -total
- 24.57%    7.902      1 Template:Sketcher_Tools_navi/fr
- 18.76%    6.034      2 Template:Navigation_menu_2
- 15.98%    5.141      1 Template:Userdocnavi/fr
- 15.61%    5.021      1 Template:GuiCommand/fr
- 10.92%    3.513      2 Template:Docnav/fr
-  7.31%    2.351      1 Template:Code
-  6.88%    2.214      2 Template:Incode
-  5.62%    1.807      2 Template:Version/fr
-  4.89%    1.573      3 Template:KEY
+100.00%   49.583      1 -total
+ 17.14%    8.497      1 Template:GuiCommand/fr
+ 16.77%    8.314      1 Template:Sketcher_Tools_navi/fr
+ 16.05%    7.957      2 Template:Version/fr
+ 12.26%    6.077      1 Template:Code
+ 11.29%    5.599      2 Template:Navigation_menu_2
+ 10.25%    5.084      1 Template:Userdocnavi/fr
+ 10.24%    5.078      2 Template:Docnav/fr
+  5.80%    2.876      3 Template:KEY
+  5.34%    2.650      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2482-0!canonical and timestamp 20260125102717 and revision id 1743635. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2482-0!canonical and timestamp 20260125125643 and revision id 1743900. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
