--- a/wiki/fr/TechDraw_BrokenView.html
+++ b/wiki/fr/TechDraw_BrokenView.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw BrokenView/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+BrokenView&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_BrokenView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw UnterbrocheneAnsicht (76% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_BrokenView.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw UnterbrocheneAnsicht (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_BrokenView.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw BrokenView (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_BrokenView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Vista interrotta (71% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -23,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Vues de Techdraw &rarr; Vue interrompue
+<td class="ctEven">TechDraw &rarr; Vues de l'atelier Techdraw &rarr; Vue interrompue
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -128,7 +128,7 @@
 <hr>
 <ul><li><b>Extensions&nbsp;:</b>
 <ul><li><b>Attributs et modifications&nbsp;:</b> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>, <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>, <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">Prolonger</a>, <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">Raccourcir</a>, <a href="../fr/TechDraw_ExtensionLockUnlockView.html" title="TechDraw ExtensionLockUnlockView/fr">Verrouiller/d&eacute;verrouiller</a>, <a href="../fr/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/fr">Positionner une vue en coupe</a>, Aligner (<a href="../fr/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/fr">horizontalement</a> -  <a href="../fr/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/fr">verticalement</a> - <a href="../fr/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/fr">obliquemement</a>), Cascade (<a href="../fr/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/fr">horizontale</a> - <a href="../fr/TechDraw_ExtensionCascadeVertDimension.html" title="TechDraw ExtensionCascadeVertDimension/fr">verticale</a> - <a href="../fr/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/fr">inclin&eacute;e</a>), <a href="../fr/TechDraw_ExtensionAreaAnnotation.html" title="TechDraw ExtensionAreaAnnotation/fr">Calculer l'aire des faces s&eacute;lectionn&eacute;es</a>, <a href="../fr/TechDraw_ExtensionArcLengthAnnotation.html" title="TechDraw ExtensionArcLengthAnnotation/fr">Longueur d'arc d'ar&ecirc;tes s&eacute;lectionn&eacute;es</a>,  <a href="../fr/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/fr">Personnaliser le format d'infobulle</a></li>
-<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersection de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
+<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersections cosm&eacute;tiques de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
 <li><b>Cotes&nbsp;:</b> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre '&#8960;'</a>, <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube '&#12348;'</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Ins&eacute;rer le pr&eacute;fixe "n&times;"</a>,  <a href="../fr/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/fr">Supprimer les symboles</a>, D&eacute;cimales (<a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">en plus</a> - <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">en moins</a>)</li></ul></li></ul>
 <hr>
 <ul><li><b>Divers&nbsp;:</b> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer l'objet cosm&eacute;tique</a></li></ul>
@@ -151,35 +151,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111144922
+Cached time: 20260125133244
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.125 seconds
+CPU time usage: 0.086 seconds
+Real time usage: 0.157 seconds
 Preprocessor visited node count: 563/1000000
-Post&#8208;expand include size: 27271/2097152 bytes
-Template argument size: 10047/2097152 bytes
+Post&#8208;expand include size: 27319/2097152 bytes
+Template argument size: 10081/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3004/5000000 bytes
+Unstrip post&#8208;expand size: 3009/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.397      1 -total
- 20.71%    7.330      1 Template:TechDraw_Tools_navi/fr
- 16.09%    5.697      4 Template:PropertyData
- 13.71%    4.854      2 Template:Navigation_menu_2
-  9.74%    3.447      4 Template:Variable
-  9.04%    3.201      1 Template:Userdocnavi/fr
-  8.13%    2.878      1 Template:GuiCommand/fr
-  8.07%    2.857      2 Template:Docnav/fr
-  7.50%    2.656      1 Template:TitleProperty
-  6.23%    2.204      1 Template:Code
+100.00%   43.743      1 -total
+ 18.96%    8.293      1 Template:TitleProperty
+ 14.74%    6.449      1 Template:TechDraw_Tools_navi/fr
+ 11.86%    5.188      4 Template:PropertyData
+ 11.84%    5.181      1 Template:Code
+ 10.42%    4.556      2 Template:Navigation_menu_2
+  9.82%    4.294      2 Template:Docnav/fr
+  9.72%    4.251      1 Template:GuiCommand/fr
+  6.86%    3.001      1 Template:Userdocnavi/fr
+  6.50%    2.843      4 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:340836-0!canonical and timestamp 20260111144921 and revision id 1734338. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:340836-0!canonical and timestamp 20260125133243 and revision id 1743962. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
