--- a/wiki/fr/TechDraw_BrokenView.html
+++ b/wiki/fr/TechDraw_BrokenView.html
@@ -70,7 +70,7 @@
 <li>Ajoutez une ou plusieurs esquisses de rupture &agrave; la s&eacute;lection en les s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Chaque esquisse ne doit contenir que deux lignes parall&egrave;les. Vous pouvez &eacute;galement utiliser d'autres objets comportant deux bords parall&egrave;les.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_BrokenView.svg&amp;filetimestamp=20241021172252&amp;.html" class="mw-file-description"><img src="../File/TechDraw_BrokenView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Vue interrompue</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_BrokenView.svg&amp;filetimestamp=20241021172252&amp;.html" class="mw-file-description"><img src="../File/TechDraw_BrokenView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vue interrompue</b> du menu.</li></ul></li></ol>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_BrokenView.svg&amp;filetimestamp=20241021172252&amp;.html" class="mw-file-description"><img src="../File/TechDraw_BrokenView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vue interrompue</b> du menu.</li></ul></li></ol>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -151,15 +151,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125133244
+Cached time: 20260125133256
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
+CPU time usage: 0.101 seconds
 Real time usage: 0.157 seconds
 Preprocessor visited node count: 563/1000000
-Post&#8208;expand include size: 27319/2097152 bytes
-Template argument size: 10081/2097152 bytes
+Post&#8208;expand include size: 27329/2097152 bytes
+Template argument size: 10091/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -167,19 +167,19 @@ Unstrip post&#8208;expand size: 3009/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.743      1 -total
- 18.96%    8.293      1 Template:TitleProperty
- 14.74%    6.449      1 Template:TechDraw_Tools_navi/fr
- 11.86%    5.188      4 Template:PropertyData
- 11.84%    5.181      1 Template:Code
- 10.42%    4.556      2 Template:Navigation_menu_2
-  9.82%    4.294      2 Template:Docnav/fr
-  9.72%    4.251      1 Template:GuiCommand/fr
-  6.86%    3.001      1 Template:Userdocnavi/fr
-  6.50%    2.843      4 Template:Variable
+100.00%   57.041      1 -total
+ 17.98%   10.258      4 Template:PropertyData
+ 17.55%   10.010      1 Template:TechDraw_Tools_navi/fr
+ 10.88%    6.205      1 Template:TitleProperty
+ 10.40%    5.934      2 Template:Navigation_menu_2
+  9.64%    5.500      4 Template:Variable
+  7.66%    4.371      2 Template:Caption
+  7.48%    4.265      1 Template:Userdocnavi/fr
+  7.26%    4.144      1 Template:GuiCommand/fr
+  6.44%    3.676      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:340836-0!canonical and timestamp 20260125133243 and revision id 1743962. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:340836-0!canonical and timestamp 20260125133255 and revision id 1743964. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
