--- a/wiki/fr/TechDraw_View.html
+++ b/wiki/fr/TechDraw_View.html
@@ -113,11 +113,8 @@
 <p><span id="Properties_Part_View"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s_Vue_de_Part"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s_Vue_de_Part">Propri&eacute;t&eacute;s Vue de Part</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Voir aussi&nbsp;: <a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
-</p>
-</div>
-<p>Une vue de Part, en fait un objet <code>TechDraw::DrawViewPart</code>, a les propri&eacute;t&eacute;s suivantes&nbsp;:
+<p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
+</p><p>Une vue de Part, en fait un objet <code>TechDraw::DrawViewPart</code>, a les propri&eacute;t&eacute;s suivantes&nbsp;:
 </p><p><span id="Data"></span>
 </p>
 <h3><span id="Donn.C3.A9es"></span><span class="mw-headline" id="Donn&eacute;es">Donn&eacute;es</span></h3>
@@ -315,13 +312,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125133513
+Cached time: 20260125133706
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.210 seconds
-Real time usage: 0.269 seconds
-Preprocessor visited node count: 3275/1000000
+CPU time usage: 0.154 seconds
+Real time usage: 0.241 seconds
+Preprocessor visited node count: 3274/1000000
 Post&#8208;expand include size: 59682/2097152 bytes
 Template argument size: 15337/2097152 bytes
 Highest expansion depth: 7/100
@@ -331,19 +328,19 @@ Unstrip post&#8208;expand size: 5519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   79.384      1 -total
- 24.36%   19.337     58 Template:Variable
- 19.74%   15.667     35 Template:PropertyData
- 14.09%   11.185     23 Template:PropertyView
- 10.80%    8.574      1 Template:TechDraw_Tools_navi/fr
-  8.07%    6.408      2 Template:Navigation_menu_2
-  6.07%    4.819     11 Template:Value
-  5.93%    4.711     12 Template:TitleProperty
-  5.27%    4.185      1 Template:Userdocnavi/fr
-  4.73%    3.752     65 Template:Incode
+100.00%   81.751      1 -total
+ 24.09%   19.695     58 Template:Variable
+ 21.79%   17.813     35 Template:PropertyData
+ 12.09%    9.886     23 Template:PropertyView
+  8.80%    7.195      1 Template:TechDraw_Tools_navi/fr
+  6.45%    5.270     12 Template:TitleProperty
+  6.01%    4.910     11 Template:Value
+  5.87%    4.795      2 Template:Navigation_menu_2
+  4.75%    3.881     65 Template:Incode
+  4.18%    3.421      1 Template:Userdocnavi/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125133512 and revision id 1743966. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125133706 and revision id 1743968. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
