--- a/wiki/fr/TechDraw_View.html
+++ b/wiki/fr/TechDraw_View.html
@@ -112,7 +112,7 @@
 </div>
 <p><span id="Properties_Part_View"></span>
 </p>
-<h2><span id="Propri.C3.A9t.C3.A9s_Vue_de_Part"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s_Vue_de_Part">Propri&eacute;t&eacute;s Vue de Part</span></h2>
+<h2><span id="Propri.C3.A9t.C3.A9s_Vue_d.27une_pi.C3.A8ce"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s_Vue_d'une_pi&egrave;ce">Propri&eacute;t&eacute;s Vue d'une pi&egrave;ce</span></h2>
 <p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
 </p><p>Une vue de Part, en fait un objet <code>TechDraw::DrawViewPart</code>, a les propri&eacute;t&eacute;s suivantes&nbsp;:
 </p><p><span id="Data"></span>
@@ -312,12 +312,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125133706
+Cached time: 20260125134103
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.154 seconds
-Real time usage: 0.241 seconds
+CPU time usage: 0.177 seconds
+Real time usage: 0.224 seconds
 Preprocessor visited node count: 3274/1000000
 Post&#8208;expand include size: 59682/2097152 bytes
 Template argument size: 15337/2097152 bytes
@@ -328,19 +328,19 @@ Unstrip post&#8208;expand size: 5519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   81.751      1 -total
- 24.09%   19.695     58 Template:Variable
- 21.79%   17.813     35 Template:PropertyData
- 12.09%    9.886     23 Template:PropertyView
-  8.80%    7.195      1 Template:TechDraw_Tools_navi/fr
-  6.45%    5.270     12 Template:TitleProperty
-  6.01%    4.910     11 Template:Value
-  5.87%    4.795      2 Template:Navigation_menu_2
-  4.75%    3.881     65 Template:Incode
-  4.18%    3.421      1 Template:Userdocnavi/fr
+100.00%   71.490      1 -total
+ 25.11%   17.955     58 Template:Variable
+ 20.42%   14.599     35 Template:PropertyData
+ 14.28%   10.208     23 Template:PropertyView
+  9.01%    6.443      1 Template:TechDraw_Tools_navi/fr
+  7.28%    5.206      2 Template:Navigation_menu_2
+  6.94%    4.964      1 Template:Userdocnavi/fr
+  5.63%    4.022     65 Template:Incode
+  5.43%    3.885     11 Template:Value
+  5.36%    3.834     12 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125133706 and revision id 1743968. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134102 and revision id 1743970. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
