--- a/wiki/fr/TechDraw_View.html
+++ b/wiki/fr/TechDraw_View.html
@@ -55,7 +55,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Vue</b> ajoute une repr&eacute;sentation d'un ou plusieurs objets &agrave; une feuille de dessin. <span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: il peut cr&eacute;er un <a href="#Propri%C3%A9t%C3%A9s_Groupe_de_projection_d'un_%C3%A9l%C3%A9ment">&eacute;l&eacute;ment de groupe de projection (une seule vue)</a>, un <a href="../fr/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/fr">groupe de projection</a>, une <a href="../fr/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/fr">vue de Spreadsheet</a>, une <a href="../TechDraw_ArchView.html" title="TechDraw ArchView">vue de Arch</a>, un <a href="../TechDraw_Symbol.html" title="TechDraw Symbol">symbole</a> ou une <a href="../TechDraw_Image.html" title="TechDraw Image">vue d'une image</a>.
+<p>L'outil <b>TechDraw Vue</b> ajoute une repr&eacute;sentation d'un ou plusieurs objets &agrave; une feuille de dessin.<br>
+<span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: il peut cr&eacute;er un <a href="#Propri%C3%A9t%C3%A9s_Groupe_de_projection_d'un_%C3%A9l%C3%A9ment">&eacute;l&eacute;ment de groupe de projection (une seule vue)</a>, un <a href="../fr/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/fr">groupe de projection</a>, une <a href="../fr/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/fr">vue de Spreadsheet</a>, une <a href="../TechDraw_ArchView.html" title="TechDraw ArchView">vue de Arch</a>, un <a href="../TechDraw_Symbol.html" title="TechDraw Symbol">symbole</a> ou une <a href="../TechDraw_Image.html" title="TechDraw Image">vue d'une image</a>.
 </p><p>Jusqu'&agrave; la <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>, l'outil ne pouvait cr&eacute;er qu'une <a href="#Propri%C3%A9t%C3%A9s_Vue_de_Part">vue de Part</a>, tr&egrave;s similaire &agrave; un &eacute;l&eacute;ment de groupe de projection.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_View_example.png&amp;filetimestamp=20181125223331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View_example.png" decoding="async" width="168" height="238" class="mw-file-element" data-file-width="168" data-file-height="238"></a></span>
 </p>
@@ -312,12 +313,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125134103
+Cached time: 20260125134152
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.177 seconds
-Real time usage: 0.224 seconds
+CPU time usage: 0.189 seconds
+Real time usage: 0.233 seconds
 Preprocessor visited node count: 3274/1000000
 Post&#8208;expand include size: 59682/2097152 bytes
 Template argument size: 15337/2097152 bytes
@@ -328,19 +329,19 @@ Unstrip post&#8208;expand size: 5519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.490      1 -total
- 25.11%   17.955     58 Template:Variable
- 20.42%   14.599     35 Template:PropertyData
- 14.28%   10.208     23 Template:PropertyView
-  9.01%    6.443      1 Template:TechDraw_Tools_navi/fr
-  7.28%    5.206      2 Template:Navigation_menu_2
-  6.94%    4.964      1 Template:Userdocnavi/fr
-  5.63%    4.022     65 Template:Incode
-  5.43%    3.885     11 Template:Value
-  5.36%    3.834     12 Template:TitleProperty
+100.00%   88.126      1 -total
+ 22.89%   20.172     58 Template:Variable
+ 19.68%   17.339     35 Template:PropertyData
+ 12.56%   11.069     23 Template:PropertyView
+  9.66%    8.514     11 Template:Value
+  7.50%    6.607     65 Template:Incode
+  6.19%    5.456      1 Template:TechDraw_Tools_navi/fr
+  5.46%    4.815      2 Template:Navigation_menu_2
+  5.17%    4.560     12 Template:TitleProperty
+  3.90%    3.439      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134102 and revision id 1743970. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134152 and revision id 1743972. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
