--- a/wiki/fr/TechDraw_View.html
+++ b/wiki/fr/TechDraw_View.html
@@ -88,9 +88,7 @@
 <li>Un <a href="#Propri%C3%A9t%C3%A9s_Groupe_de_projection_d'un_%C3%A9l%C3%A9ment">groupe de projection d'un &eacute;l&eacute;ment</a> ou, s'il y a une ou plusieurs projections secondaires, un <a href="../fr/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/fr">groupe de projection</a> est ins&eacute;r&eacute;.</li></ol>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_View_Taskpanel.png&amp;filetimestamp=20240925142411&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View_Taskpanel.png" decoding="async" width="282" height="496" class="mw-file-element" data-file-width="282" data-file-height="496"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;"><a href="../fr/Task_panel.html" class="mw-redirect" title="Task panel/fr">Panneau des t&acirc;ches</a> Vue de l'objet</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;"><a href="../fr/Task_panel.html" class="mw-redirect" title="Task panel/fr">Panneau des t&acirc;ches</a> Nouvelle vue</p>
 <p><span id="Usage_other_view_types"></span>
 </p>
 <h2><span id="Utilisation_pour_d.27autres_types_de_vues"></span><span class="mw-headline" id="Utilisation_pour_d'autres_types_de_vues">Utilisation pour d'autres types de vues</span></h2>
@@ -311,15 +309,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125134551
+Cached time: 20260125134622
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.187 seconds
-Real time usage: 0.358 seconds
-Preprocessor visited node count: 3273/1000000
-Post&#8208;expand include size: 59684/2097152 bytes
-Template argument size: 15339/2097152 bytes
+CPU time usage: 0.195 seconds
+Real time usage: 0.240 seconds
+Preprocessor visited node count: 3272/1000000
+Post&#8208;expand include size: 59680/2097152 bytes
+Template argument size: 15337/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -327,19 +325,19 @@ Unstrip post&#8208;expand size: 5519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  135.238      1 -total
- 19.27%   26.055     35 Template:PropertyData
- 18.98%   25.667     58 Template:Variable
- 12.27%   16.588     23 Template:PropertyView
-  8.26%   11.176     11 Template:Value
-  6.97%    9.426     12 Template:TitleProperty
-  6.46%    8.736     65 Template:Incode
-  5.43%    7.339      1 Template:GuiCommand/fr
-  5.15%    6.958      1 Template:TechDraw_Tools_navi/fr
-  4.90%    6.625      4 Template:TRUE
+100.00%   68.606      1 -total
+ 26.83%   18.405     58 Template:Variable
+ 22.39%   15.359     35 Template:PropertyData
+ 13.54%    9.291     23 Template:PropertyView
+ 10.19%    6.990      1 Template:TechDraw_Tools_navi/fr
+  8.33%    5.714      2 Template:Navigation_menu_2
+  5.93%    4.069     12 Template:TitleProperty
+  5.57%    3.824      1 Template:Userdocnavi/fr
+  4.91%    3.368     11 Template:Value
+  4.73%    3.246     65 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134550 and revision id 1743978. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134622 and revision id 1743980. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
