--- a/wiki/fr/TechDraw_View.html
+++ b/wiki/fr/TechDraw_View.html
@@ -195,11 +195,8 @@
 </p><p><span id="Properties_Projection_Group_Item"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s_Groupe_de_projection_d.27un_.C3.A9l.C3.A9ment"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s_Groupe_de_projection_d'un_&eacute;l&eacute;ment">Propri&eacute;t&eacute;s Groupe de projection d'un &eacute;l&eacute;ment</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Voir aussi&nbsp;: <a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
-</p>
-</div>
-<p>Une groupe de projection d'un &eacute;l&eacute;ment, en fait un objet <code>TechDraw::DrawProjGroupItem</code>, est d&eacute;riv&eacute;e d'une <a class="mw-selflink-fragment" href="#Propri%C3%A9t%C3%A9s_Vue_de_Part">vue de Part</a> et h&eacute;rite de toutes ses propri&eacute;t&eacute;s. Il poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
+<p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
+</p><p>Une groupe de projection d'un &eacute;l&eacute;ment, en fait un objet <code>TechDraw::DrawProjGroupItem</code>, est d&eacute;riv&eacute;e d'une <a class="mw-selflink-fragment" href="#Propri%C3%A9t%C3%A9s_Vue_de_Part">vue de Part</a> et h&eacute;rite de toutes ses propri&eacute;t&eacute;s. Il poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
 </p><p><span id="Data"></span>
 </p>
 <h3><span id="Donn.C3.A9es_2"></span><span class="mw-headline" id="Donn&eacute;es_2">Donn&eacute;es</span></h3>
@@ -307,13 +304,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125134728
+Cached time: 20260125134746
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.181 seconds
-Real time usage: 0.305 seconds
-Preprocessor visited node count: 3271/1000000
+CPU time usage: 0.169 seconds
+Real time usage: 0.324 seconds
+Preprocessor visited node count: 3270/1000000
 Post&#8208;expand include size: 59680/2097152 bytes
 Template argument size: 15337/2097152 bytes
 Highest expansion depth: 7/100
@@ -323,19 +320,19 @@ Unstrip post&#8208;expand size: 5519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  142.767      1 -total
- 25.69%   36.674     58 Template:Variable
- 22.24%   31.747     35 Template:PropertyData
- 14.51%   20.715     23 Template:PropertyView
- 10.50%   14.990      1 Template:TechDraw_Tools_navi/fr
- 10.47%   14.945      1 Template:GuiCommand/fr
-  5.00%    7.143     12 Template:TitleProperty
-  4.77%    6.809      2 Template:Navigation_menu_2
-  4.68%    6.681     11 Template:Value
-  4.24%    6.055     65 Template:Incode
+100.00%  110.928      1 -total
+ 24.43%   27.100     58 Template:Variable
+ 23.54%   26.110     35 Template:PropertyData
+ 11.18%   12.403      1 Template:TechDraw_Tools_navi/fr
+  9.43%   10.463     23 Template:PropertyView
+  8.65%    9.598      2 Template:Navigation_menu_2
+  7.28%    8.070     12 Template:TitleProperty
+  5.49%    6.085      1 Template:Userdocnavi/fr
+  5.44%    6.030     11 Template:Value
+  4.28%    4.752     65 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134728 and revision id 1743984. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134746 and revision id 1743986. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
